# GenshinPiano

./: .gitignore  LICENSE  README.en.md  README.md  build.gradle  settings.gradle
.github/workflows/: gradle-publish.yml
gradle/wrapper/: gradle-wrapper.properties
libs/: keySimulation.sys  keySimulationForMap.sys
libs/libsources/dll/: CMakeLists.txt
libs/libsources/dll/src/cpp/: DrawCall.cpp  GameVer.cpp  HotKey4J.cpp  MessageProcess.cpp  main.cpp  tWind.cpp
libs/libsources/dll/src/include/: GameVer.h  MessageProcess.h  Stc.h  device.h  tWind.h  xyz_chener_javafx_jni_DrawCall.h  xyz_chener_javafx_jni_HotKey4J.h
libs/libsources/sys/: keySimulation.sln
libs/libsources/sys/keySimulation/: entrance.cpp  kbd.cpp  kbd.h  keySimulation.vcxproj  keySimulation.vcxproj.filters  mouth.cpp  mouth.h  public.h  utils.h
src/main/java/: module-info.java
src/main/java/xyz/chener/genshinpiano/: Main.java  MainApplication.java  MainController.java
src/main/java/xyz/chener/genshinpiano/gui/: MainApplication.java  MainController.java  RpcLogApplication.java  RpcLogController.java
src/main/java/xyz/chener/genshinpiano/music/autoplay/: DefaultAutoPlay.java  DefaultStepPlay.java
src/main/java/xyz/chener/genshinpiano/music/helper/: Config.java  GmHelper.java  KeyStateNotify.java  WindHelper.java
src/main/java/xyz/chener/genshinpiano/music/jni/: DrawCall.java  HotKey4J.java
src/main/java/xyz/chener/genshinpiano/music/keymapper/: KeyCodeMapper.java  KeyMapper.java
src/main/java/xyz/chener/genshinpiano/music/prase/: Prase.java  SourceType.java
src/main/java/xyz/chener/genshinpiano/tcpctl/: MsInfo.java  RpcCtl.java  RpcServer.java
src/main/resources/: keymap.json  keymap2.json
src/main/resources/xyz/chener/genshinpiano/: hello-view.fxml  log.fxml
(+13 files in other folders)
